<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/channel_description"
        android:layout_width="361dp"
        android:layout_height="67dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/background_input"
        android:hint="@string/Short_channel_description"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout

        android:id="@+id/layout_dialog"
        android:layout_width="405dp"
        android:layout_height="219dp"
        android:layout_marginTop="230dp"

        android:layout_marginEnd="1dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20ssp"
            android:layout_weight="@integer/material_motion_duration_short_1"
            android:background="@drawable/bckgr_color"
            android:text="@string/Ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/dialog_button_back"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20ssp"
            android:layout_weight="@integer/material_motion_duration_short_1"
            android:background="@drawable/bckgr_color"
            android:text="@string/Back"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_channel_create"
        android:layout_width="361dp"
        android:layout_height="67dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_input"
        android:hint="@string/Channel_name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="395dp"
        android:layout_height="76dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/Create_new_channel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input_channel_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>