<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/layout_dialog"
        android:layout_width="218dp"
        android:layout_height="257dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="275dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actions"

            android:textSize="20sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/btn_add_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bckgr_color"
            android:text="@string/add_channel"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:importantForAccessibility="no"
            />


        <Button
            android:id="@+id/btn_enter_the_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bckgr_color"
            android:text="@string/Enter_the_channel"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:importantForAccessibility="no"/>

        <Button
            android:id="@+id/btn_close_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Cancel"
            android:background="@drawable/bckgr_color"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:importantForAccessibility="no"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>